Fixed the overflowing navbar

--- a/index.css
+++ b/index.css
@@ -114,13 +114,13 @@ body{
 .service-card{
     display: flex;
     flex-direction: column;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     border: white solid 1px;
     background: radial-gradient(circle at 50% 50%,rgba(255,255,255,0.4) 0%,rgba(255,255,255,0.4) 20%,rgba(var(--primary-rgb), 0.2) 75%,rgba(var(--primary-rgb), 0.5) 80%,var(--primary-color) 100%);
 }
 .service-icon{
-    height: 73%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
