--- a/try.css
+++ b/try.css
@@ -1,3 +1,330 @@
+/******************************************/
+        /*Navigation*/
+        /******************************************/
+
+        nav {
+            
+            background: var(--primary-color);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            right: 0;
+            left: 0; 
+            padding: 1rem 2rem;
+            z-index: 1000;
+        }
+
+        .navbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            max-width: 1200px;
+            margin: auto;
+        }
+
+        .logo {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 0rem 1.5rem;
+            background: white;
+            gap: 5px;
+        }
+
+        .logo img {
+            height: 30px;
+        }
+
+        .logo h1 {
+            font-family: 'Futura-Light', sans-serif;
+            font-weight: lighter;
+            font-size: .8rem;
+            color: black;
+        }
+
+
+        /* Menu Items */
+        .nav-links {
+            gap: 2px;
+            display: flex;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            right:0;
+            /* box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1); */
+        }
+
+        .nav-links li {
+            position: relative;
+        }
+
+        .blue {
+            background-color: var(--primary-color);
+        }
+
+        .red {
+            background-color: var(--secondary-color);
+        }
+
+        .nav-links a {
+            display: flex;
+            flex-direction: column;
+            padding: 0rem 1.5rem;
+            /* mobile safe */
+            max-width: 120px;
+            height: 30px;
+            text-align: center;
+            align-content: center;
+            justify-content: center;
+            text-decoration: none;
+            color: white;
+            position: relative;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            font-family: 'Futura-Demi', sans-serif;
+            font-size: 1rem;
+        }
+
+        /* Underline animation */
+        /*.nav-links a::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: 5px;
+            width: 0%;
+            height: 2px;
+            background-color: white;
+            transition: width 0.3s ease;
+        } */
+
+        /* .nav-links a:hover::after {
+            width: 100%;
+        } */
+
+        /* Mobile Menu Button */
+        .menu-toggle {
+            display: none;
+            font-size: 28px;
+            cursor: pointer;
+        }
+
+        /* Responsive Styling */
+        @media (max-width: 768px) {
+            nav {
+                padding: 1rem 1rem;
+                width: 100%;
+            }
+
+            .nav-container {
+                flex-direction: column;
+                gap: 10px;
+                padding: 0 15px;
+            }
+
+            .logo {
+                font-size: 1.3rem;
+                padding: 0 0rem;
+            }
+
+            nav ul {
+                gap: 15px;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            nav a {
+                font-size: 0.9rem;
+                padding: 8px 12px;
+            }
+
+            .menu-toggle {
+                display: block;
+                color: white;
+            }
+
+            .nav-links {
+
+                max-height: 0;
+                flex-direction: column;
+                background: white;
+                position: absolute;
+                top: 68px;
+                right: 0;
+                width: 100%;
+                text-align: center;
+                z-index: 999;
+                padding: 12px 0px;
+                overflow: hidden;
+                opacity: 0;
+                transform: translateY(-10px);
+                transition:
+                    max-height 0.4s ease,
+                    opacity 0.3s ease,
+                    transform 0.3s ease;
+            }
+
+            .nav-links.active {
+                max-height: 600px;
+                background-color: var(--primary-color);
+                transform: translateY(0);
+                opacity: 1;
+            }
+
+            .nav-links a {
+                padding: 5px 15px;
+            }
+
+            .nav-links li {
+                width: 100%;
+                text-align: left;
+            }
+
+            .blue {
+                background-color: transparent;
+            }
+
+            .red {
+                background-color: transparent;
+            }
+        }
+
+        /* Small mobile devices */
+        @media (max-width: 480px) {
+            header {
+                padding: 8px 0;
+            }
+
+            .logo {
+                font-size: 0.5rem;
+            }
+
+            nav ul {
+                gap: 10px;
+            }
+
+            nav a {
+                font-size: 0.8rem;
+                padding: 6px 8px;
+            }
+
+
+        }
+
+        /******************************************/
+        /*Hero*/
+        /******************************************/
+        .hero {
+            background: url(images/blackbg@4x-8.png) no-repeat center center/cover;
+        }
+
+        .hero-desktop {
+            display: block;
+            padding: 2rem 4rem;
+
+        }
+
+        .hero-container {
+            width: 100%;
+            align-content: center;
+            padding: 2% 0 0 2%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+
+        }
+
+        .hero-text {
+            /* background-color: var(--light-blue); */
+            height: 90vh;
+            padding: 0.7rem 0.7rem 0.7rem 2rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 30px;
+        }
+
+        .hero-text h1 {
+            font-family: 'Futura-Bold', sans-serif;
+            font-size: 4rem;
+            color: black;
+            margin: 0;
+
+        }
+
+        .hero-text p {
+            font-family: 'Futura-Light', sans-serif;
+            font-size: 1.5rem;
+            color: black;
+        }
+
+        .hero-text a {
+            font-family: 'Futura-Light', sans-serif;
+            font-weight: bolder;
+            text-decoration: none;
+            color: white;
+            padding: 0.5rem 2rem;
+        }
+
+        .quote {
+            background-color: var(--secondary-color);
+        }
+
+        .portfolio {
+            background-color: var(--primary-color);
+        }
+
+        .hero-image {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        .hero-img {
+            height: auto;
+            width: 100%;
+        }
+        .cta-contact {
+            display: none;
+        }
+
+        @media (max-width: 768px) {
+            .hero-desktop {
+                padding: 1rem 1rem 1rem 1rem;
+            }
+
+            .hero-container {
+                padding: 6rem 0 0 0;
+                display: flex;
+                flex-direction: column;
+                gap: 60px;
+            }
+
+            .hero-text h1 {
+                font-size: 3rem;
+            }
+
+
+        }
+
+        /*  @media (max-width:1024px) {
+            .hero-container {
+                padding: 0 0 0 0rem;
+            }
+
+            .hero-text {
+                padding: 0.7rem;
+            }
+
+            .hero-text h1 {
+                font-size: 4rem;
+            }
+
+            .hero-text li {
+                padding: 0.3rem .9rem;
+            }
+        } */
 
         
         
